Fixed missing border in camera recordings screen in landscape orientation

--- a/src/views/layouts/App.css
+++ b/src/views/layouts/App.css
@@ -13,6 +13,7 @@
 	overflow-x: hidden;
 	overflow-y: auto;
 	height: 100%;
+	-webkit-overflow-scrolling: touch;
 }
 .contentCentered {
 	composes: content;
